Created route subscribers

--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -15,15 +15,15 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <LinkTo @route="dashboard" class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <span>Dashboard</span></LinkTo>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <LinkTo @route="subscribers" class="nav-link" href="#">
                     <i class="fas fa-fw fa-users"></i>
-                    <span>Subscribers</span></a>
+                    <span>Subscribers</span></LinkTo>
             </li>
 
             <li class="nav-item">
