--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -27,9 +27,9 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <LinkTo @route="payments" class="nav-link" href="#">
                     <i class="fas fa-fw fa-money-bill-alt"></i>
-                    <span>Payments</span></a>
+                    <span>Payments</span></LinkTo>
             </li>
 
             <li class="nav-item">
