--- a/app/_pods/application/template.hbs
+++ b/app/_pods/application/template.hbs
@@ -10,7 +10,7 @@
             <!-- Main Content -->
             <div id="content">
 
-               <NavBar />
+                <NavBar />
 
                 {{outlet}}
 
@@ -58,7 +58,8 @@
         </div>
     </div>
 
-    {{!-- <!-- Bootstrap core JavaScript-->
+    {{!--
+    <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
