--- a/app/_pods/payments/template.hbs
+++ b/app/_pods/payments/template.hbs
@@ -13,7 +13,7 @@
         <thead>
           <tr>
             <th scope="col">Subscriber name</th>
-            <th scope="col">Date</th>
+            <th scope="col">Registered date</th>
             <th scope="col">Status</th>
           </tr>
         </thead>
