--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion {{if this.isToggled 'toggled'}}" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
@@ -37,13 +37,15 @@
     <li class="nav-item">
         <a class="nav-link" href="#">
             <FaIcon @icon="futbol" />
-            <span>Football list</span></a>
+            <span>Football list</span>
+        </a>
     </li>
 
     <li class="nav-item">
         <a class="nav-link" href="#">
             <FaIcon @icon="tasks" />
-            <span>Managers</span></a>
+            <span>Managers</span>
+        </a>
     </li>
 
     <hr class="sidebar-divider d-none d-md-block">
@@ -51,13 +53,15 @@
     <li class="nav-item">
         <a class="nav-link" href="#">
             <FaIcon @icon="cogs" />
-            <span>Settings</span></a>
+            <span>Settings</span>
+        </a>
     </li>
 
     <li class="nav-item">
         <a class="nav-link" href="#">
             <FaIcon @icon="user-check" />
-            <span>Subscription</span></a>
+            <span>Subscription</span>
+        </a>
     </li>
 
     <!-- Divider -->
@@ -65,7 +69,8 @@
 
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
-        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        <button {{on "click" (fn (mut this.isToggled) (not this.isToggled))}} class="rounded-circle border-0"
+            id="sidebarToggle"></button>
     </div>
 
 </ul>
