--- a/app/_pods/payments/edit/template.hbs
+++ b/app/_pods/payments/edit/template.hbs
@@ -20,7 +20,7 @@
                 <label for="status" class="status-label">Status</label>
 
                 <div>
-                    <XToggle class="float-left" @theme='ios' @value={{this.model.status}} @onToggle={{fn (mut
+                    <XToggle class="float-left" @theme='ios' @value={{this.model.status}} @onToggle={{ (mut
                         this.model.status)}} />
                 </div>
             </div>
