--- a/app/_pods/components/nav-bar/template.hbs
+++ b/app/_pods/components/nav-bar/template.hbs
@@ -13,7 +13,7 @@
                 aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
-                    <i class="fas fa-search fa-sm"></i>
+                    <FaIcon @icon="search" />
                 </button>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <li class="nav-item dropdown no-arrow mx-1">
             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-bell fa-fw"></i>
+                <FaIcon @icon="bell" />
                 <!-- Counter - Alerts -->
                 <span class="badge badge-danger badge-counter">3+</span>
             </a>
