--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -4,7 +4,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+            <FaIcon @icon="laugh-wink" @size="2x" />
         </div>
         <div class="sidebar-brand-text mx-3">SINOVUZ</div>
     </a>
@@ -69,8 +69,7 @@
 
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
-        <button {{on "click" (fn (mut this.isToggled) (not this.isToggled))}} class="rounded-circle border-0"
-            id="sidebarToggle"></button>
+        <FaIcon {{on "click" (fn (mut this.isToggled) (not this.isToggled))}} @size='2x' class='sidebar-toggle-icon' @icon={{if this.isToggled 'chevron-circle-right' 'chevron-circle-left'}} />
     </div>
 
 </ul>
