--- a/app/_pods/main/payments/template.hbs
+++ b/app/_pods/main/payments/template.hbs
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
           {{#each this.rows as |row|}}
-          <Table::TableRow @row={{row}} @route="payments.edit"/>
+          <Table::TableRow @row={{row}} @route="main.payments.edit"/>
           {{/each}}
         </tbody>
 
