--- a/app/_pods/main/subscribers/edit/template.hbs
+++ b/app/_pods/main/subscribers/edit/template.hbs
@@ -6,15 +6,18 @@
         <div class="row">
             <div class="col-3">
                 <label for="inputName" class="form-label">Name</label>
-                <input type="text" value={{this.subscriber.name}} id="inputName" class="form-control" aria-describedby="text">
+                <input type="text" value={{this.subscriber.name}} id="inputName" class="form-control"
+                    aria-describedby="text">
             </div>
             <div class="col-3">
                 <label for="inputData" class="form-label">Registered date</label>
-                <input type="text" value={{this.subscriber.date}} id="inputdata" class="form-control" aria-describedby="text">
+                <input type="text" value={{this.subscriber.date}} id="inputdata" class="form-control"
+                    aria-describedby="text">
             </div>
             <div class="col-3">
                 <label for="inputPayment" class="form-label">Payment</label>
-                <input type="text" value={{this.subscriber.payment}} id="</div>" class="form-control" aria-describedby="text">
+                <input type="text" value={{this.subscriber.payment}} id="</div>" class="form-control"
+                    aria-describedby="text">
             </div>
             <div class="col-3">
                 <label for="status" class="status-label">Status</label>
