work with ember data

--- a/app/_pods/components/nav-bar/template.hbs
+++ b/app/_pods/components/nav-bar/template.hbs
@@ -114,46 +114,23 @@
                 </menu.item>
                 <menu.item>
                     <menu.link-to @route="main.settings">
-                                    <FaIcon @icon="cogs" />
+                                    <FaIcon @icon="cog" />
 
                         Settings</menu.link-to>
                 </menu.item>
                 <menu.item>
                     <menu.link-to @route="main.activity-log">
+                        <FaIcon @icon="chart-line" />
                         Activity Log</menu.link-to>
                 </menu.item>
                 <menu.divider />
                 <menu.item>
                     <menu.link-to @route="login"> <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                        <FaIcon @icon="sign-out-alt" />
                         Logout</menu.link-to>
                 </menu.item>
             </dd.menu>
         </BsDropdown>
-        {{!-- <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
-                <img class="img-profile rounded-circle" src="/img/undraw_profile.svg">
-            </a>
-            <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
-
-                </a>
-                <a class="dropdown-item" href="#">
-
-                </a>
-                <a class="dropdown-item" href="#">
-
-                </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-
-                </a>
-            </div>
-        </li> --}}
-
     </ul>
-
 </nav>
 <!-- End of Topbar -->
