--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -52,7 +52,7 @@
 
     <li class="nav-item">
         <a class="nav-link" href="#">
-            <FaIcon @icon="cogs" />
+            <FaIcon @icon="cog" />
             <span>Settings</span>
         </a>
     </li>
