--- a/app/_pods/main/subscribers/index/template.hbs
+++ b/app/_pods/main/subscribers/index/template.hbs
@@ -7,6 +7,7 @@
   <!-- Page Heading -->
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Subscribers</h1>
+    <LinkTo @route='main.subscribers.edit' @model='new' class="btn btn-primary">Add</LinkTo>
   </div>
 
   <div class="row">
