fixed subscribers and payments edit, added delete button to payments

--- a/app/_pods/components/nav-bar/template.hbs
+++ b/app/_pods/components/nav-bar/template.hbs
@@ -9,8 +9,22 @@
     <!-- Topbar Search -->
     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                aria-label="Search" aria-describedby="basic-addon2">
+            {{!-- <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                aria-label="Search" aria-describedby="basic-addon2"> --}}
+            <PowerSelect
+                @triggerClass="form-control bg-light border-0 small"
+                @searchEnabled={{true}}
+                @search={{perform this.searchRecords}}
+                @searchField="name"
+                @options={{this.searchResults}}
+                @onInput={{this.onSearchInput}}
+                @selected={{this.selectedRecord}}
+                @placeholder="Search for..."
+                @allowClear={{true}}
+                @onChange={{this.selectRecord}} as |record|>
+                    {{record.name}} - {{record.constructor.modelName}}
+            </PowerSelect>
+
             <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
                     <FaIcon @icon="search" />
