--- a/app/_pods/components/side-bar/template.hbs
+++ b/app/_pods/components/side-bar/template.hbs
@@ -36,7 +36,7 @@
 
     <li class="nav-item">
         <a class="nav-link" href="#">
-            <FaIcon @icon="futbol" />
+            <FaIcon @icon="football-ball" />
             <span>Football list</span>
         </a>
     </li>
