--- a/app/_pods/main/payments/edit/template.hbs
+++ b/app/_pods/main/payments/edit/template.hbs
@@ -3,32 +3,35 @@
         Edit
     </div>
     <div class="card-body">
-        
-            <div class="">
-                <label for="inputName" class="form-label">Name</label>
-                <Input @type="text" @value={{this.payment.name}} id="inputName" class="form-control" />
-            </div>
-            <div class="">
-                <label for="inputData" class="form-label">Registered date</label>
-                <Input @type="text" @value={{this.payment.date}} id="inputdata" class="form-control" />
-            </div>
-            <div class="">
-                <label for="inputPayment" class="form-label">Payment</label>
-                <Input @type="text" @value={{this.payment.payment}} id="</div>" class="form-control" />
-            </div>
-            <div class="">
-                <label for="status" class="status-label">Status</label>
 
-                <div>
-                    <XToggle class="float-left" @theme='ios' @value={{this.payment.status}} @onToggle={{ (mut
-                        this.payment.status)}} />
-                </div>
+        <div class="">
+            <label for="inputName" class="form-label">Name</label>
+            <Input @type="text" @value={{this.payment.name}} id="inputName" class="form-control" />
+        </div>
+        <div class="">
+            <label for="inputData" class="form-label">Registered date</label>
+            <Input @type="text" @value={{this.payment.date}} id="inputdata" class="form-control" />
+        </div>
+        <div class="">
+            <label for="inputPayment" class="form-label">Payment</label>
+            <Input @type="text" @value={{this.payment.payment}} id="</div>" class="form-control" />
+        </div>
+        <div class="">
+            <label for="status" class="status-label">Status</label>
+
+            <div>
+                <XToggle class="float-left" @theme='ios' @value={{this.payment.status}} @onToggle={{ (mut
+                    this.payment.status)}} />
             </div>
-        
+        </div>
+
 
 
     </div>
     <div class="card-footer">
         <button {{on 'click' this.save}} class="btn btn-primary">Save</button>
+
+        <button {{on 'click' this.delete}} class="btn btn-danger">Delete</button>
+
     </div>
 </div>
