--- a/app/_pods/main/payments/template.hbs
+++ b/app/_pods/main/payments/template.hbs
@@ -13,13 +13,21 @@
         <thead>
           <tr>
             <th scope="col">Subscriber name</th>
-            <th scope="col">Registered date</th>
+            <th scope="col">Created date</th>
             <th scope="col">Status</th>
           </tr>
         </thead>
         <tbody>
           {{#each this.rows as |row|}}
-          <Table::TableRow @row={{row}} @route="main.payments.edit"/>
+            <LinkTo @tagName="tr" @route="main.payments.edit" @model={{row}}>
+              <th scope="row">{{row.subscriber.name}}</th>
+              <td>{{moment-format row.date 'MM.DD.YYYY'}}</td>
+              <td>
+                <span class="{{if row.status " bg-primary" "bg-danger" }} badge text-white">
+                  {{if row.status "success" "cancelled"}}
+                </span>
+              </td>
+            </LinkTo>
           {{/each}}
         </tbody>
 
