--- a/app/_pods/main/subscribers/edit/template.hbs
+++ b/app/_pods/main/subscribers/edit/template.hbs
@@ -30,5 +30,7 @@
     </div>
     <div class="card-footer">
         <button {{on 'click' this.save}} class="btn btn-primary">Save</button>
+
+        <button {{on 'click' this.delete}} class="btn btn-danger">Delete</button>
     </div>
 </div>
